version/0.4/_sources/api/ansys/sam/sysml2/meta_model/annotation/Annotation.rst.txt






:class:`Annotation`
===================


.. py:class:: ansys.sam.sysml2.meta_model.annotation.Annotation(element_id: str)

   Bases: :py:obj:`ansys.sam.sysml2.meta_model.relationship.Relationship`


   
   Java class 'com.ansys.metamodel.sysml2.Annotation'.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Annotation

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~annotated_element`
            - Get the annotated element property.
          * - :py:attr:`~annotating_element`
            - Get the annotating element property.
          * - :py:attr:`~owned_annotating_element`
            - Get the owned annotating element property.
          * - :py:attr:`~owning_annotated_element`
            - Get the owning annotated element property.
          * - :py:attr:`~owning_annotating_element`
            - Get the owning annotating element property.







Import detail
-------------

.. code-block:: python

    from ansys.sam.sysml2.meta_model.annotation import Annotation

Property detail
---------------

.. py:property:: annotated_element
   :type: Element


   
   Get the annotated element property.





   :Returns:

       "Element"
           Value of property annotated element.











   ..
       !! processed by numpydoc !!

.. py:property:: annotating_element
   :type: AnnotatingElement


   
   Get the annotating element property.





   :Returns:

       "AnnotatingElement"
           Value of property annotating element.











   ..
       !! processed by numpydoc !!

.. py:property:: owned_annotating_element
   :type: AnnotatingElement


   
   Get the owned annotating element property.





   :Returns:

       "AnnotatingElement"
           Value of property owned annotating element.











   ..
       !! processed by numpydoc !!

.. py:property:: owning_annotated_element
   :type: Element


   
   Get the owning annotated element property.





   :Returns:

       "Element"
           Value of property owning annotated element.











   ..
       !! processed by numpydoc !!

.. py:property:: owning_annotating_element
   :type: AnnotatingElement


   
   Get the owning annotating element property.





   :Returns:

       "AnnotatingElement"
           Value of property owning annotating element.











   ..
       !! processed by numpydoc !!






